Fix version compile erro